--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "event_nite",
   "private": true,
+  "scripts": {
+    "start": "webpack --watch --mode=development",
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "12.6.0",
+    "npm": "6.9.0"
+  },
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
@@ -9,8 +17,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   }
